<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Network Relay</string> 
    <string name="relOn" >on</string>
    <string name="relOff">off</string>
    
    <string name="relAllOn" >all on</string>
    <string name="relAllOff">all off</string> 
    
    
    <string name="ipset">ip port setting：</string> 
    
    <string name="state0">off</string> 
    <string name="state1">on</string>
    <string name="state2">unknow</string> 
    
    <string name="relay1">realy1</string> 
    <string name="relay2">realy2</string> 
    <string name="relay3">realy3</string> 
    <string name="relay4">realy4</string>  
    
    
    <string name="msg1">connect time out</string> 
    <string name="msg2">connect success</string> 
    <string name="msg3">devices disconnect</string> 
    <string name="msg4">send success</string> 
    <string name="msg5">devices disconnect,please connect again</string> 
    <string name="msg6">invalid ip</string> 
    <string name="msg7">invalid port</string> 
    
    
    <string name="tileQuit">"are you sure to quit？"</string> 
    <string name="lbQuit">quit</string> 
    <string name="lbCancle">cancle</string> 
    
    <string name="lbRelay">relay</string>  
    <string name="lbAbout">about</string>  
    <string name="lbSet">settings</string>  
     <string name="lbSave">save</string>  
     <string name="lbnamerel">named relay</string>  
    <string name="setSuccess">set success</string>  
   
	<string name="lblog1">"    Jinan USR IOT Technology Co., Ltd. work on IOT(internet of things), have deepth advantage in serial to etherent convert products, we develpment and manufacture RS232/RS485/TTL UART to Ethernet/WIFI/GPRS convert products."</string>
	<string name="lblog2">"    This program is for test TCPIP socket commulication, please do not directly use in commercial use."</string>
	<string name="lbnet">http://www.usr.cn</string>
	<string name="lbtel">8653155507297</string>
	<string name="lbmail">Email:tec@usr.cn</string>
</resources>