<?xml version="1.0" encoding="utf-8"?>  
 
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8px"
        android:paddingRight="8px"
        android:text="@string/lblog1"
        android:textAppearance="@style/BlueText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblog2"
        android:textAppearance="@style/BlueText" 
        android:paddingLeft="8px" 
        android:paddingRight="8px"/>

    <RelativeLayout
        
        android:id="@+id/relativeLayout1"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8px"
            android:src="@drawable/logo" />
        
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:layout_alignParentRight="true"	       
	        android:orientation="vertical"
	        android:layout_marginTop="15px" >
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbnet" 
	            android:layout_margin="4px"
	            android:autoLink="web"/>
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_centerVertical="true" 
		        android:layout_margin="4px"
		        android:text="@string/lbtel" 
		        android:autoLink="phone"/>	
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:layout_margin="4px"
		        android:layout_alignParentRight="true"
		        android:text="@string/lbmail" 
		        android:textColor="#4169E1"
		         />
	    </LinearLayout>
    </RelativeLayout>
</LinearLayout>         
